# remote_control

./: .gitmodules  CMakeLists.txt  README.md  package.xml
config/: remote_control.yaml
include/: Sender.h
include/remote_control/: Utils.h
launch/: remote_control_receiver.launch  remote_control_sender.launch
scripts/: remote_control_gui.py
src/: Receiver.cpp  ReceiverNode.cpp  Sender.cpp  SenderNode.cpp
